// Vitest Snapshot v1

exports[`button > should work with \`size\` prop 1`] = `
"<button class=\\"eu-button eu-button--default bg-default text-black eu-button--xs\\">
  <!---->
  <!----><span>xs</span>
</button>"
`;

exports[`button > should work with \`size\` prop 2`] = `
"<button class=\\"eu-button eu-button--default bg-default text-black eu-button--sm\\">
  <!---->
  <!----><span>sm</span>
</button>"
`;

exports[`button > should work with \`size\` prop 3`] = `
"<button class=\\"eu-button eu-button--default bg-default text-black eu-button--md\\">
  <!---->
  <!----><span>md</span>
</button>"
`;

exports[`button > should work with \`size\` prop 4`] = `
"<button class=\\"eu-button eu-button--default bg-default text-black eu-button--lg\\">
  <!---->
  <!----><span>lg</span>
</button>"
`;

exports[`button > should work with \`size\` prop 5`] = `
"<button class=\\"eu-button eu-button--default bg-default text-black eu-button--xl\\">
  <!---->
  <!----><span>xl</span>
</button>"
`;

exports[`button > should work with \`type\` prop 1`] = `
"<button class=\\"eu-button eu-button--default bg-default text-black eu-button--md\\">
  <!---->
  <!----><span>default</span>
</button>"
`;

exports[`button > should work with \`type\` prop 2`] = `
"<button class=\\"eu-button eu-button--text bg-text text-white eu-button--md\\">
  <!---->
  <!----><span>text</span>
</button>"
`;

exports[`button > should work with \`type\` prop 3`] = `
"<button class=\\"eu-button eu-button--primary bg-primary text-white eu-button--md\\">
  <!---->
  <!----><span>primary</span>
</button>"
`;

exports[`button > should work with \`type\` prop 4`] = `
"<button class=\\"eu-button eu-button--info bg-info text-white eu-button--md\\">
  <!---->
  <!----><span>info</span>
</button>"
`;

exports[`button > should work with \`type\` prop 5`] = `
"<button class=\\"eu-button eu-button--success bg-success text-white eu-button--md\\">
  <!---->
  <!----><span>success</span>
</button>"
`;

exports[`button > should work with \`type\` prop 6`] = `
"<button class=\\"eu-button eu-button--warning bg-warning text-white eu-button--md\\">
  <!---->
  <!----><span>warning</span>
</button>"
`;

exports[`button > should work with \`type\` prop 7`] = `
"<button class=\\"eu-button eu-button--error bg-error text-white eu-button--md\\">
  <!---->
  <!----><span>error</span>
</button>"
`;

exports[`button > should work with \`type\` prop 8`] = `
"<button class=\\"eu-button eu-button--purple bg-purple text-white eu-button--md\\">
  <!---->
  <!----><span>purple</span>
</button>"
`;
